Bug 1296446 - Do not render VR frames until a WebGLContext has returned a mirroring layer r=jgilbert - Fixes a crash that occurred when WebVR frames were rendered prior to   setting up the WebGLContext for mirroring back to the 2d display.

MozReview-Commit-ID: Fq4c2287KBL