dom/canvas/WebGLContext.h
@@ -1087,6 +1087,7 @@ protected:
     bool mInvalidated;
     bool mCapturedFrameInvalidated;
     bool mResetLayer;
+    bool mLayerIsMirror;
     bool mOptionsFrozen;
     bool mMinCapability;
     bool mDisableExtensions;
